[package]
name = "qv"
description = "quickly view your data"
version = "0.9.6"
edition = "2021"
homepage = "https://github.com/timvw/qv"
repository = "https://github.com/timvw/qv"
readme = "README.md"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
license = "Apache-2.0"
keywords = [ "quickview", "data", "query", "sql", "datafusion" ]
exclude = [
    ".github/*",
    "ci/*",
    "dev/*",
    "testing/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.2.1"
aws-sdk-glue = "1.27"
aws-types = "1.2"
aws-credential-types = "1.2"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
datafusion = { version = "35", features = ["avro"] }
deltalake = { version = "0.17", default-features = false, features = ["datafusion-ext", "s3", "gcs"] }
futures = "0.3"
glob = "0.3"
object_store = { version = "0.9", features = ["aws", "gcp"] }
regex = "1.10.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1"
