[package]
name = "qv"
description = "quickly view your data"
version = "0.9.6"
edition = "2021"
homepage = "https://github.com/timvw/qv"
repository = "https://github.com/timvw/qv"
readme = "README.md"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
license = "Apache-2.0"
keywords = [ "quickview", "data", "query", "sql", "datafusion" ]
exclude = [
    ".github/*",
    "ci/*",
    "dev/*",
    "testing/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.2.1"
aws-sdk-glue = "1.27"
aws-types = "1.2"
aws-credential-types = "1.2"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
#datafusion = { version = "44", features = ["avro"] }
datafusion = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d", features = ["avro"]}
deltalake = { git = "https://github.com/delta-io/delta-rs.git", rev = "rust-v0.23.0", default-features = false, features = ["datafusion-ext", "s3", "gcs"] }
futures = "0.3"
glob = "0.3"
object_store = { version = "0.11", features = ["aws", "gcp"] }
regex = "1.10"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
url = "2.5"

[patch.crates-io]
datafusion = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d", features = ["avro"]}
datafusion-expr = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d"}
datafusion-common = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d", features = ["avro"]}
datafusion-proto = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d"}
datafusion-sql = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d"}
datafusion-physical-expr = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d"}
datafusion-physical-plan = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d"}
datafusion-functions = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d"}
datafusion-functions-aggregate = { git = "https://github.com/timvw/datafusion.git", rev = "6e7c5467510636d97ee9ecf498cd54d7719f031d"}

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1"
