[package]
name = "qv"
description = "quickly view your data"
version = "0.9.15"
edition = "2021"
homepage = "https://github.com/timvw/qv"
repository = "https://github.com/timvw/qv"
readme = "README.md"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
license = "Apache-2.0"
keywords = [ "quickview", "data", "query", "sql", "datafusion" ]
exclude = [
    ".github/*",
    "ci/*",
    "dev/*",
    "testing/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.8.11"
aws-sdk-glue = "1.131.0"
aws-types = "1.3"
aws-credential-types = "1.2"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
datafusion = { version = "52.0", features = ["avro"] }
deltalake = { version = "0.29.4", default-features = false, features = ["datafusion-ext", "s3", "gcs"] }
futures = "0.3"
glob = "0.3"
object_store = { version = "0.12", features = ["aws", "gcp"] }
openssl = { version = "0.10", optional = true }
regex = "1.10"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1"

[features]
default = []
# Enable OpenSSL when needed; use vendored builds for fully static artifacts.
openssl-tls = ["dep:openssl"]
vendored-openssl = ["openssl-tls", "openssl/vendored"]
